src/test/ui/regions/regions-normalize-in-where-clause-list.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'a` due to conflicting requirements
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:1
   |
LL | / fn bar<'a, 'b>()
LL | |
LL | |
LL | | where
LL | |     <() as Project<'a, 'b>>::Item: Eq,
   | |______________________________________^
   |
note: first, the lifetime cannot outlive the lifetime `'a` as defined here...
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:8
   |
LL | fn bar<'a, 'b>()
   |        ^^
note: ...but the lifetime must also be valid for the lifetime `'b` as defined here...
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:12
   |
LL | fn bar<'a, 'b>()
   |            ^^
note: ...so that the types are compatible
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:1
   |
LL | / fn bar<'a, 'b>()
LL | |
LL | |
LL | | where
LL | |     <() as Project<'a, 'b>>::Item: Eq,
   | |______________________________________^
   = note: expected `Project<'a, 'b>`
              found `Project<'_, '_>`

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'a` due to conflicting requirements
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:4
   |
LL | fn bar<'a, 'b>()
   |    ^^^
   |
note: first, the lifetime cannot outlive the lifetime `'a` as defined here...
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:8
   |
LL | fn bar<'a, 'b>()
   |        ^^
note: ...but the lifetime must also be valid for the lifetime `'b` as defined here...
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:12
   |
LL | fn bar<'a, 'b>()
   |            ^^
note: ...so that the types are compatible
  --> $DIR/regions-normalize-in-where-clause-list.rs:24:4
   |
LL | fn bar<'a, 'b>()
   |    ^^^
   = note: expected `Project<'a, 'b>`
              found `Project<'_, '_>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0495`.
